  EntityLookupField now places the caret at index 0 when the selected entity has been set
  DefaultEntityEditModel.getDefaultEntity() now always returns an unmodified instance
  TableSelectionModel.TableModelProxy.addTableModelListener() added
  AbstractFilteredTableModel.removeItems() now uses removeItem(), so that it fires table row deleted, worse performance probably
  DefaultTableSelectionModel now listens to TableModelEvent.DELETE events and modifies the selection accordingly, bypassing the vetoSelectionChange functionality for obvious reasons
  DefaultEntityModel.initializeDetailModels() now protected
  EntityTestUnit no longer uses LoginPanel for getting unit test user credentials
  EntityPanel no longer explicitly sets the edit panel dialog location
  DefaultEntityTableModel now clears the selection when the associated edit model is cleared
  ValueChangeEvent.toString() added
  DefaultEntityEditModel.delete() now clears the model if the active entity was deleted
  EntityUiUtil.createTextArea() overloaded with enabledState
  Databases.getDatabaseStatistics() moved to DatabaseUtil along with associated classes
  DefaultFilteredComboBoxModel.acceptAllCriteria now static and final
  Util.NullFormat() privatized, NULL_FORMAT constant introduced
  Naming prefixes for State and Event instances removed (st, evt)
  FilteredTableModel.setColumns() moved to FilteredTableColumnModel
0.7.0
  Tomcat jdbc connection pool plugin added, lots of refactoring in common.db.pool and elsewhere
  EntityRESTService plugin added, some refactoring of related components
  ivy.xml reorganized and improved
  ValueMapImpl.setAs() improved, now fires value change events only after all values have been set
  EntityConnectionImpl.executeFunction/Procedure() does not check for transaction states before or after execution, leaving the responsibility in the hands of the programmer
  EntityConnectionLogger now package private, instantiated via EntityConnections.createLogger()